--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -1,55 +1,16 @@
 <form
-	class="[ newsletter ]"
+	class="[ newsletter ][ flow ]"
   action="https://buttondown.email/api/emails/embed-subscribe/ellyloel"
 	method="post"
 >
-	<div class="[ flow ]">
-		<h2>Newsletter 📬</h2>
-		<p>
-			Keep up to date with my writing and bookmarking as well as anything else I'm working on. 
-		</p>
-		<p>
-			Most content will likely be related to: 👩🏼‍💻
-		</p>
-		<ul>
-			<li>Web design</li>
-			<li>Web standards</li>
-			<li>Accessibility</li>
-			<li>Design systems</li>
-		</ul>
-		<details>
-			<summary>
-				But maybe also: 🤨
-			</summary>
-			<ul>
-				<li>Disability</li>
-				<li>Neurodivergence</li>
-				<li>Queerness</li>
-				<li>Intersectionality</li>
-				<li>Leftist politics</li>
-			</ul>
-		</details>
-		<p>
-			<strong>
-				No spam, unsubscribe at any time.
-			</strong>
-			<br>
-			<small>
-				<em>
-					<a href="https://buttondown.email">Powered by Buttondown.</a>
-				</em>
-			</small>
-		</p>
-		<div>
-			<div class="[ flex flex-col ]">
-				<label for="bd-name">Name</label>
-				<input type="text" name="metadata__name" id="bd-name">
-			</div>
-			<div class="[ flex flex-col ]">
-				<label for="bd-email">Email</label>
-				<input type="email" name="email" id="bd-email">
-			</div>
-			<button type="submit">✨ Subscribe ✨</button>
-		</div>
+	<div class="[ flex flex-col ]">
+		<label for="bd-name">Name</label>
+		<input type="text" name="metadata__name" id="bd-name">
 	</div>
+	<div class="[ flex flex-col ]">
+		<label for="bd-email">Email</label>
+		<input type="email" name="email" id="bd-email">
+	</div>
+	<button type="submit">✨ Subscribe ✨</button>
+	<small><a href="https://buttondown.com/">Powered by Buttondown</a></small>
 </form>
