--- a/src/input/css/blocks/button.css
+++ b/src/input/css/blocks/button.css
@@ -35,6 +35,8 @@
 	-webkit-tap-highlight-color: transparent;
 	text-align: center;
 	-webkit-touch-callout: none;
+
+	/* TODO: Currently this breaks the focus-visible outline transition */
 	transition: border-color 0.5s var(--ease-3) 3s, box-shadow 145ms var(--ease-4);
 	user-select: none;
 }
