--- a/src/input/css/blocks/lite-youtube.css
+++ b/src/input/css/blocks/lite-youtube.css
@@ -1,23 +1,15 @@
 lite-youtube {
-	background: var(--black);
+	aspect-ratio: 16 / 9;
+	background-color: oklch(0% 0 0deg);
 	background-position: center center;
 	background-size: cover;
 	border-radius: var(--radius-2);
-	contain: content;
 	cursor: pointer;
 	display: block;
 	max-width: 720px;
 	position: relative;
 
-	/* responsive iframe with a 16:9 aspect ratio
-	 * thanks https://css-tricks.com/responsive-iframes/ */
-	&::after {
-		content: "";
-		display: block;
-		padding-bottom: calc(100% / (16 / 9));
-	}
-
-	> iframe {
+	& > iframe {
 		border: 0;
 		height: 100%;
 		left: 0;
@@ -27,26 +19,27 @@ lite-youtube {
 	}
 
 	/* play button */
-	> .lty-playbtn {
-		background: transparent;
+	& > .lyt-playbtn {
+		/* …but visually it's still the same size */
+		background: no-repeat center/68px 48px;
 
 		/* YT's actual play button svg */
-		background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 68 48"><path fill="%23f00" fill-opacity="0.8" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path d="M 45,24 27,14 27,34" fill="%23fff"></path></svg>');
-		border: none;
+		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 48"><path d="M66.52 7.74c-.78-2.93-2.49-5.41-5.42-6.19C55.79.13 34 0 34 0S12.21.13 6.9 1.55c-2.93.78-4.63 3.26-5.42 6.19C.06 13.05 0 24 0 24s.06 10.95 1.48 16.26c.78 2.93 2.49 5.41 5.42 6.19C12.21 47.87 34 48 34 48s21.79-.13 27.1-1.55c2.93-.78 4.64-3.26 5.42-6.19C67.94 34.95 68 24 68 24s-.06-10.95-1.48-16.26z" fill="red"/><path d="M45 24 27 14v20" fill="white"/></svg>');
+		border: 0;
 		cursor: pointer;
+		display: block;
 		filter: grayscale(100%);
-		height: 48px;
-		left: 50%;
+		height: 100%;
 		position: absolute;
-		top: 50%;
-		transform: translate3d(-50%, -50%, 0);
-		transition: filter 0.1s cubic-bezier(0, 0, 0.2, 1);
-		width: 68px;
+		transition: border-color 0.5s var(--ease-3) 3s, box-shadow 145ms var(--ease-4), filter 300ms cubic-bezier(0, 0, 0.2, 1);
+
+		/* Make the button element cover the whole area for a large hover/click target… */
+		width: 100%;
 		z-index: 1;
 	}
 
-	&:hover > .lty-playbtn,
-	.lty-playbtn:focus {
+	&:hover > .lyt-playbtn,
+	> .lyt-playbtn:focus-visible {
 		filter: none;
 	}
 
@@ -55,19 +48,7 @@ lite-youtube {
 		cursor: unset;
 	}
 
-	&.lyt-activated::before,
-	&.lyt-activated > .lty-playbtn {
-		opacity: 0;
-		pointer-events: none;
+	&.lyt-activated > .lyt-playbtn {
+		display: none;
 	}
-}
-
-.lyt-visually-hidden {
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	height: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
 }
