Contact page content

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -84,84 +84,11 @@ eleventyImport:
 			<img class="[ u-photo u-logo ]" src="/../assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' loading="lazy" decoding="async" width="723" height="723">
 			<div class="[ p-gender-identity ]">woman</div>
 		</div>
-		<div class="[ flow ]">
+		<aside class="[ flow ]">
 			<h2>Where's Elly?</h2>
-			<ul class="[ social-links ][ flow ]">
-				<li>
-					<a href="https://elly.to/mastodon" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:mastodon" -%}
-						<span>Mastodon</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://elly.to/bluesky" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:bluesky" -%}
-						<span>Bluesky</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:linkedin" -%}
-						<span>LinkedIn</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://elly.to/github" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:github" -%}
-						<span>GitHub</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://elly.to/kofi" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "local:kofi" -%}
-						<span>Ko-fi</span>
-					</a>
-				</li>
-				<li>
-					<details>
-						<summary>More links</summary>
-						<ul class="[ flow ]">
-							<li>
-								<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:codepen" -%}
-									<span>Codepen</span>
-								</a>
-							</li>
-							<li>
-								<a href="https://www.threads.net/fediverse_profile/elly@front-end.social" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:threads" -%}
-									<span>Threads</span> <small>(Fediverse profile)</small>
-								</a>
-							</li>
-							<li>
-								<a href="https://instagram.com/elly.louise.loel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:instagram" -%}
-									<span>Private Instagram</span> <small>(kinda use)</small>
-								</a>
-							</li>
-							<li>
-								<a href="https://instagram.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:instagram" -%}
-									<span>Public Instagram</span> <small>(don't use)</small>
-								</a>
-							</li>
-							<li>
-								<a href="https://tumblr.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:tumblr" -%}
-									<span>Tumblr</span> <small>(kinda use)</small>
-								</a>
-							</li>
-							<li>
-								<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "fab:twitter" -%}
-									<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/"><span>Twitter</span></del> <small>(archive)</small>
-								</a>
-							</li>
-						</ul>
-					</details>
-				</li>
-			</ul>
-		</div>
+			{%- set disclosure = true -%}
+			{%- include "social-links.njk" -%}
+		</aside>
 	</article>
 
 	{%- include "crazy-filter.njk" -%}
