--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -138,7 +138,7 @@ kbd {
 	text-decoration-color: currentcolor;
 	text-decoration-thickness: 0.1em;
 	transition-duration: 200ms;
-	transition-property: background, text-decoration-color;
+	transition-property: background, color, text-decoration-color;
 	transition-timing-function: var(--ease-2);
 
 	&:where([href]) {
