Fixing navigation order

--- a/src/input/content/pages/tags.njk
+++ b/src/input/content/pages/tags.njk
@@ -1,6 +1,10 @@
 ---
 layout: base
 title: Tags
+eleventyNavigation:
+  key: Tags
+  parent: Garden
+  order: 2
 ---
 
 <ul class="[ tags ][ flex flex-wrap gap-2 ]">
