Fixing badge overflow issues

--- a/src/_includes/job-titles.njk
+++ b/src/_includes/job-titles.njk
@@ -1,1 +1,7 @@
-<a href="/front-end-development-s-identity-crisis/" class="[ badge ]">Web Designer (<del class="[ line-height-1 ]">Front-end Developer</del>)</a> <span class="[ badge ]">Accessibility Specialist</span> <span class="[ badge ]">Design System Developer</span>
+<div>
+	<a href="/front-end-development-s-identity-crisis/" class="[ badge ]">Web Designer / Front-end Developer / Design Engineer</a>
+	<div class="[ flex flex-wrap gap-2 margin-block-start-2 ]">
+		<p class="[ badge ]">Accessibility Specialist</p>
+		<p class="[ badge ]">Design System Developer</p>
+	</div>
+</div>
