Adding support for an intro/summary

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -17,5 +17,16 @@ layout: base-without-header.njk
 	</h1>
 </header>
 <article class="[ markdown-container ][ flow ]">
-	{{ content | safe }}
+	{% if content | includes("<!-- intro -->") %}
+	<div class="[ intro ][ flow ]">
+		{{ content | split("<!-- intro -->") | first | safe }}
+	</div>
+	<div class="[ flow ]">
+		{{ content | split("<!-- intro -->") | last | safe }}
+	</div>
+	{% else %}
+	<div class="[ flow ]">
+		{{ content | safe }}
+	</div>
+	{% endif %}
 </article>
