--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -57,7 +57,18 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 ~~~
 		{%- endmd -%}
 	{%- endif -%}
-	{{ content | safe }}
+	{% if content | includes("<!-- intro -->") %}
+	<div class="[ intro ][ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
+		{{ content | split("<!-- intro -->") | first | safe }}
+	</div>
+	<div class="[ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
+		{{ content | split("<!-- intro -->") | last | safe }}
+	</div>
+	{% else %}
+	<div class="[ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
+		{{ content | safe }}
+	</div>
+	{% endif %}
 </article>
 {%- if backlinks === [] -%}
 	<aside class="[ flow content-width ]" data-pagefind-ignore>
