--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -7,7 +7,7 @@ layout: base-without-header.njk
 		id="content"
 		tabindex="-1"
 		class="
-			{%- if page.url === "/garden/" or page.url === "/essays/" or page.url === "/notes/" or page.url === "/microposts/" or page.url === "/bookmarks/" or page.url === "/projects/" -%}
+			{%- if page.url === "/garden/" or page.url === "/microposts/" -%}
 				[ p-name ]
 			{%- endif -%}
 			[ margin-0 line-height-1 ]
