Updating Résumé and CV

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -1,10 +1,10 @@
 <dl>
 	<dt>Web development</dt>
-	<dd>Semantic HTML, Advanced CSS, JavaScript, TypeScript, PostCSS, Sass, Tailwind, PHP, Git, React, Gatsby, Next.JS, WordPress, Docker, GitHub, Bitbucket</dd>
+	<dd>Semantic HTML, Advanced CSS, PostCSS, Sass, Tailwind, JavaScript, TypeScript, 11ty, Astro, Vue.js, React, Gatsby, Next.js, Git, PHP, WordPress, Docker, GitHub, Bitbucket, Azure DevOps</dd>
 	<dt>Accessibility</dt>
-	<dd>VoiceOver (MacOS & iOS), JAWS, NVDA, TalkBack, Voice Control, Head/eye tracking, Screen magnifier, Keyboard-only, Switch controls, ARC Toolkit, Axe DevTools, WAVE Evaluation Tool</dd>
+	<dd>NVDA, JAWS, VoiceOver (MacOS & iOS), TalkBack, Windows Narrator, Windows Contrast Themes (forced colors mode), Dragon NaturallySpeaking, Voice Control (MacOS & iOS), Windows Voice access, Screen magnifier, Keyboard-only, Head/eye tracking, Switch controls, ARC Toolkit, Axe DevTools, WAVE Evaluation Tool</dd>
 	<dt>Design</dt>
 	<dd>Figma, Miro, Adobe Creative Suite</dd>
 	<dt>Misc.</dt>
-	<dd>Notion, Atlassian Suite, Google Workspace, Microsoft 365 Suite</dd>
+	<dd>Google Workspace, Microsoft 365 apps, Atlassian Suite, Notion, Proton Suite</dd>
 </dl>
