--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -69,3 +69,4 @@
 @import url("./blocks/unfurl.css") layer(blocks);
 @import url("./blocks/webmentions.css") layer(blocks);
 @import url("./blocks/weeks.css") layer(blocks);
+@import url("./blocks/work.css") layer(blocks);
