Adding Acknowledgement of Country

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -19,7 +19,6 @@
 			</css-doodle>
 		</is-land>
 		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
-
 			{%- image
 			"./src/assets/img/coding.png",
 			"A digital drawing of me, a blonde woman in a white sweater with headphones on sitting at my desk in front of a keyboard and monitor coding." -%}
@@ -48,6 +47,12 @@
 					{%- endfor -%}
 				</ul>
 			</nav>
+
+			<div class="[ acknowledgement-of-country ] [ flow ]">
+				<h2>Acknowledgement of Country</h2>
+				<p>I acknowledge the Traditional Owners and Custodians of the lands on which I live and work, the <a href="https://www.bunuronglc.org">Bunurong People</a> and <a href="https://www.wurundjeri.com.au">Wurundjeri People</a> of the <a href="https://en.wikipedia.org/wiki/Kulin_nation">Kulin Nation</a>. I acknowledges their continuing connection to land, waters and community. I pay my respects to to the people, the cultures and Elders past, present and emerging.</p>
+				<p><strong>Sovereignty has never been ceded, it always was and always will be, Aboriginal land.</strong></p>
+			</div>
 
 			<ul role="list" class="[ social-links ][ flex-wrap ]">
 				<li>
