Updating my photo

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -20,8 +20,8 @@
 		</is-land>
 		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
 			{%- image
-			"./src/assets/img/coding.png",
-			"A digital drawing of me, a blonde woman in a white sweater with headphones on sitting at my desk in front of a keyboard and monitor coding." -%}
+			"./src/assets/img/elly-puppy-transparent.webp",
+			"A cute and playful digital drawing of Elly the Golden Retriever Puppy Girl typing on her sticker covered laptop and looking surprised. She has wavy blonde hair and she's wearing a grey scoop neck top and large green headphones which are tucked under her big fluffy ears." -%}
 
 			<nav aria-labelledby="footer-nav" class="[ sitemap ] [ flow ]">
 				<h2 id="footer-nav">Sitemap</h2>
