--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -81,7 +81,7 @@ eleventyImport:
 			<p class="[ lastfm-playing ]">The last song I listened to was <a href="https://www.last.fm/music/Never+Gonna+Give+You+Up/_/Rick+Astley" class="[ song ][ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fab:lastfm" %} "<span>Never Gonna Give You Up</span>"</a> by <em class="[ artist ]">Rick Astley</em>.</p>
 		</div>
 		<div hidden>
-			<img class="[ u-photo u-logo ]" src="/../assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' loading="lazy" decoding="async" width="723" height="723">
+			<img class="[ u-photo u-logo ]" src="/../assets/img/elly-puppy-transparent.webp" alt="A cute and playful digital drawing of Elly the Golden Retriever Puppy Girl typing on her sticker covered laptop and looking surprised. She has wavy blonde hair and she's wearing a grey scoop neck top and large green headphones which are tucked under her big fluffy ears." loading="lazy" decoding="async" width="723" height="723">
 			<div class="[ p-gender-identity ]">woman</div>
 		</div>
 		<aside class="[ flow ]">
