--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -70,26 +70,6 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 	</div>
 	{% endif %}
 </article>
-{%- if backlinks === [] -%}
-	<aside class="[ flow content-width ]" data-pagefind-ignore>
-		<h2>Backlinks</h2>
-		<ul class="[ flow ]">
-			{%- for link in backlinks -%}
-				<li>
-					<details>
-						<summary>
-							{{ link.title }}
-						</summary>
-						{{ link.excerpt }} &#8230;
-				<br/>
-						<a href="{{ link.url }}">Read more <span class="[ visually-hidden ]">about {{ link.title }}</span>
-						</a>
-					</details>
-				</li>
-			{%- endfor -%}
-		</ul>
-	</aside>
-{%- endif -%}
 <footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);" data-pagefind-ignore>
 	<div class="[ share ][ flow flow-space-setter ]">
 		<h2>Share</h2>
@@ -131,5 +111,6 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 			{%- endif -%}
 		</nav>
 	{%- endif -%}
+	{%- include "backlinks.njk" -%}
 	{%- include "webmentions.njk" -%}
 </footer>
