--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -369,6 +369,10 @@ summary {
 	margin: calc(var(--size-2) * -1) calc(var(--size-3) * -1);
 	overflow-wrap: break-word;
 	padding: var(--size-2) var(--size-3);
+
+	& :is(h1, h2, h3, h4, h5, h6) {
+		display: inline;
+	}
 }
 
 details {
