--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -38,6 +38,7 @@
 @import url("./blocks/callout.css") layer(blocks);
 @import url("./blocks/card.css") layer(blocks);
 @import url("./blocks/chronological.css") layer(blocks);
+@import url("./blocks/content-footer.css") layer(blocks);
 @import url("./blocks/date.css") layer(blocks);
 @import url("./blocks/eight-ball.css") layer(blocks);
 @import url("./blocks/emoji.css") layer(blocks);
