Fixing/updating/improving backlinks, graph, and misc. links

--- a/src/input/content/pages/garden.njk
+++ b/src/input/content/pages/garden.njk
@@ -4,6 +4,8 @@ title: Garden
 eleventyNavigation:
   key: Garden
   order: 1
+eleventyImport:
+  collections: ["postsSortedByDate"]
 ---
 
 <a href="#feed" class="[ visually-hidden ]">Skip to posts</a>
