--- a/src/_includes/backlinks.njk
+++ b/src/_includes/backlinks.njk
@@ -3,7 +3,7 @@
 {%- if backlinksCount > 0 -%}
 	<nav aria-labelledby="backlinks" class="[ flow content-width ]" data-pagefind-ignore>
 		<details>
-			<summary class="[ h2 ]"><h2 id="backlinks">Backlinks</h2></summary>
+			<summary class="[ h2 ]"><h2 id="backlinks">{{ backlinksCount }} Backlinks</h2></summary>
 			<ul>
 				{%- for otherPost in backlinks -%}
 				<li><a href="{{ otherPost.url }}">{{ otherPost.data.title }}</a></li>
